feat(TUP-36415):fix junit failure (#5855)